--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         
         <!-- bower:css -->
         <link rel="stylesheet" href="bower_components/bootstrap-css-only/css/bootstrap.css" />
+        <link rel="stylesheet" href="bower_components/font-awesome-bower/css/font-awesome.css" />
         <!-- endbower -->
 
         <!-- build:css styles/main.css -->
